# ardrone_velocity_ekf

./: contributors.txt  readme.md  readme.md~  readme.txt
ardrone_velocity_ekf/: CMakeLists.txt  package.xml
ardrone_velocity_ekf/cfg/: dynamic_param_config.cfg
ardrone_velocity_ekf/include/ardrone_velocity_ekf/: coordinate_transform.h  pid_control.h
ardrone_velocity_ekf/launch/: ardrone_velocity.launch  pid.launch
ardrone_velocity_ekf/src/: coordinate_transform.cpp  filtervelocity.cpp  pid_control.cpp  run_control.cpp  run_transform.cpp
build-velocity_control-Desktop-Default/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  velocity_control.cbp
build-velocity_control-Desktop-Default/catkin_generated/: generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
build-velocity_control-Desktop-Default/catkin_generated/installspace/: velocity_control.pc  velocity_controlConfig.cmake
build-velocity_control-Desktop-Default/catkin_generated/stamps/velocity_control/: _setup_util.py.stamp
build-velocity_control-Desktop-Default/devel/: .catkin  .rosinstall  setup.sh
build-velocity_control-Desktop-Default/devel/lib/pkgconfig/: velocity_control.pc
build-velocity_control-Desktop-Default/devel/share/velocity_control/cmake/: velocity_controlConfig.cmake
build-velocity_control-Desktop-Default/gtest/: CTestTestfile.cmake  Makefile  gtest.cbp
convert_data/: CMakeLists.txt  package.xml
convert_data/include/: vrep_connection.h  vrep_connection.h~  vrep_rl_connection.h~
convert_data/src/: convert_nav.cpp  vrep_connection.cpp
launch/: ardrone_velocity.launch
robot_localization/: CMakeLists.txt  CMakeLists.txt~  contributors.txt
robot_localization/include/robot_localization/: PingThread.h  ekf.h  filter_base.h  filter_common.h  filter_common.h~  ros_filter.h  ros_filter_types.h  ukf.h
robot_localization/launch/: EKF_PRED.launch  EKF_PRED.launch~  ardrone_ekf.launch
robot_localization/src/: PingThread.cpp  ekf.cpp  filter_base.cpp  ping_node.cpp  ros_filter (copy).cpp  ros_filter.cpp
velocity_control/: CMakeLists.txt  frames.gv  package.xml  package.xml~
velocity_control/cfg/: dynamic_param_config.cfg  dynamic_param_config.cfg~
velocity_control/include/: mpid_control.h  pi_pd_control.h  pid_control.h
velocity_control/include/ardrone_velocity/: coordinate_transform.h  filtervelocity.hpp  pid_control.h
velocity_control/src/: coordinate_transform.cpp  filtervelocity.cpp  mpid_control.cpp  pi_pd_control.cpp  pid_control.cpp  run_control.cpp  run_transform.cpp
velocity_control/src/launch/: pid.launch  pid.launch~
