<?xml version="1.0"?>
<package>
  <name>convert_data</name>
  <version>0.2.1</version>
  <description>convert_data</description>

  <maintainer email="tobias.tuylu@gmail.com">Tobias Tueylue</maintainer>

  <license>BSD</license>


  <author>Tobias Tueylue</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>nav_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf2</build_depend>


  <run_depend>nav_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf2</run_depend>


</package>
